autumn/tests/compile-fail/static_get_non_async.rs
use autumn_web::prelude::*;

#[static_get("/about")]
fn about() -> &'static str {
    "About page"
}

fn main() {}
